--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <groupId>com.summer</groupId>
     <artifactId>highlight_spring4</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <java.version>1.8</java.version>
+        <spring-framework.version>5.1.9.RELEASE</spring-framework.version>
     </properties>
 
     <dependencies>
@@ -37,6 +37,16 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
     </dependencies>
     <build>
