--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,8 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <!--包的存活周期在test周期，发布时将不包含这个jar包-->
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
